integrate chat into mainpage with html layout

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -41,6 +41,8 @@
                     </div>
                 </div>
             </li>
+            <li style="float: right" class="navbaritem" th:classappend="${chatActive}"><a href="/chat">
+                <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
             <form method="get" action="/article/search">
                 <li style="float: right" class="navbaritem">
                     <button id="searchbutton" type="submit">
