--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_deleteChat.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_deleteChat.html
@@ -1,62 +1,32 @@
 <!DOCTYPE html>
-<html lang="de" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Rhinoshare</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">
-</head>
-<body>
-<img id="titleImageTest" src="/img/rhinoLogoBig.png" width="300" height="75">
-<ul class="navigationbar">
-    <li class="navbaritem"><a class="active" href="/">Rhino-Übersicht</a></li>
-    <li class="navbaritem"><a href="/">News</a></li>
-    <li class="navbaritem"><a href="/article/">Artikel</a></li>
-    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
-        <a th:href="@{'/article/view/' + ${id}}">Meine Artikel</a>
-    <li class="navbaritem"><a href="/rent">Ausleihen</a></li>
-    <li class="navbaritem"><a href="">Contact</a></li>
-    <li class="navbaritem" href th:if="${loggedIn == 'false'}">
-        <a href="/newaccount">Registrieren</a>
-    </li>
-    <li class="navbaritem" href th:if="${loggedIn == 'true'}">
-        <a href="/edit" th:text="${surname}">Benutzer</a>
-    </li>
-    <li class="navbaritem"><input id="globalSearchField" type="text" placeholder="Suchen..."></li>
-    <li class="navbaritem"><a href="/">Suchen</a></li>
-    <li style="float: right;" class="navbaritem" href th:if="${loggedIn == 'false'}">
-        <a href="/login">Einloggen</a>
-    </li>
-    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
-        <a href="/logout">Ausloggen</a>
-    </li>
-</ul>
-<div class ="container">
-    <form method="post" th:object="${chatMessage}">
-        <table>
-            <th>Von</th>
-            <th>Gesendet an</th>
-            <th>Nachricht</th>
-            <tr>
-                <td th:text="${chatMessage.fromName}">...</td>
-                <td th:text="${chatMessage.toName}">...</td>
-                <td th:text="${chatMessage.context}">...</td>
-            </tr>
-        </table>
-         <p>Möchten Sie die Nachricht wirklich löschen? Die Nachricht wird für alle Benutzer gelöscht!</p>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
+      xmlns:layout="http://www.w3.org/1999/xhtml" >
 
-        <br>
+    <head>
+        <title>Nachrichten - Rhinoshare</title>
+    </head>
 
-        <td>
-            <button type="submit"  class="btn btn-danger">Löschen</button>
-            <a th:href="|/chat/|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
-        </td>
+    <body>
+        <div class="container" layout:fragment="content">
+            <form method="post" th:object="${chatMessage}">
+                <table>
+                    <th>Von</th>
+                    <th>Gesendet an</th>
+                    <th>Nachricht</th>
+                    <tr>
+                        <td th:text="${chatMessage.fromName}">...</td>
+                        <td th:text="${chatMessage.toName}">...</td>
+                        <td th:text="${chatMessage.context}">...</td>
+                    </tr>
+                </table>
+                 <p>Möchten Sie die Nachricht wirklich löschen? Die Nachricht wird für alle Benutzer gelöscht!</p>
+                <br>
+                <td>
+                    <button type="submit"  class="btn btn-danger">Löschen</button>
+                    <a th:href="|/chat/|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
+                </td>
+            </form>
+        </div>
+    </body>
 
-
-    </form>
-</div>
-
-
-</body>
 </html>
