--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_overview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_overview.html
@@ -1,76 +1,50 @@
 <!DOCTYPE html>
-<html lang="de" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Rhinoshare</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="icon" href="/img/RhinoLogoSmall.png">
-</head>
-<body>
-<img id="titleImageTest" src="/img/rhinoLogoBig.png" width="300" height="75">
-<ul class="navigationbar">
-    <li class="navbaritem"><a class="active" href="/">Rhino-Übersicht</a></li>
-    <li class="navbaritem"><a href="/">News</a></li>
-    <li class="navbaritem"><a href="/article/">Artikel</a></li>
-    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
-        <a th:href="@{'/article/view/' + ${id}}">Meine Artikel</a>
-    <li class="navbaritem"><a href="/rent">Ausleihen</a></li>
-    <li class="navbaritem"><a href="">Contact</a></li>
-    <li class="navbaritem" href th:if="${loggedIn == 'false'}">
-        <a href="/newaccount">Registrieren</a>
-    </li>
-    <li class="navbaritem" href th:if="${loggedIn == 'true'}">
-        <a href="/edit" th:text="${surname}">Benutzer</a>
-    </li>
-    <li class="navbaritem"><input id="globalSearchField" type="text" placeholder="Suchen..."></li>
-    <li class="navbaritem"><a href="/">Suchen</a></li>
-    <li style="float: right;" class="navbaritem" href th:if="${loggedIn == 'false'}">
-        <a href="/login">Einloggen</a>
-    </li>
-    <li style="float: right" class="navbaritem" href th:if="${loggedIn == 'true'}">
-        <a href="/logout">Ausloggen</a>
-    </li>
-</ul>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
+      xmlns:layout="http://www.w3.org/1999/xhtml" >
 
+    <head>
+        <title>Nachrichten - Rhinoshare</title>
+    </head>
 
+    <body>
+        <div class="container" layout:fragment="content">
+            <table>
+                <th>Von</th>
+                <th>Gesendet an</th>
+                <th>Nachricht</th>
+                <th:block th:each="message : ${listFrom}">
+                    <tr>
+                        <td th:text="${message.fromName}">...</td>
+                        <td th:text="${message.toName}">...</td>
+                        <td th:text="${message.context}">...</td>
+                        <td>
+                            <a th:href="|/deletechat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht löschen</button></a>
+                        </td>
+                    </tr>
 
-<table>
-    <th>Von</th>
-    <th>Gesendet an</th>
-    <th>Nachricht</th>
-    <th:block th:each="message : ${listFrom}">
-        <tr>
-            <td th:text="${message.fromName}">...</td>
-            <td th:text="${message.toName}">...</td>
-            <td th:text="${message.context}">...</td>
-            <td>
-                <a th:href="|/deletechat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht löschen</button></a>
-            </td>
-        </tr>
+                </th:block>
+            </table>
 
-    </th:block>
-</table>
+            <table>
+                <th>Von</th>
+                <th>An</th>
+                <th>Nachricht</th>
+                <th:block th:each="message : ${listTo}">
+                    <tr>
+                        <td th:text="${message.fromName}">...</td>
+                        <td th:text="${message.toName}">...</td>
+                        <td th:text="${message.context}">...</td>
+                        <td>
+                            <a th:href="|/answerchat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht antworten</button></a>
+                        </td>
+                        <td>
+                            <a th:href="|/deletechat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht löschen</button></a>
+                        </td>
+                    </tr>
 
-<table>
-    <th>Von</th>
-    <th>An</th>
-    <th>Nachricht</th>
-    <th:block th:each="message : ${listTo}">
-        <tr>
-            <td th:text="${message.fromName}">...</td>
-            <td th:text="${message.toName}">...</td>
-            <td th:text="${message.context}">...</td>
-            <td>
-                <a th:href="|/answerchat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht antworten</button></a>
-            </td>
-            <td>
-                <a th:href="|/deletechat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht löschen</button></a>
-            </td>
-        </tr>
+                </th:block>
+            </table>
+        </div>
+    </body>
 
-    </th:block>
-</table>
-
-</body>
 </html>
