fix names and some mappings in the chat

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_answer.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_answer.html
@@ -26,7 +26,7 @@
                         <td> <Input type="text" th:field="*{context}"/>  </td>
                     </tr>
                     <td><button type="submit" class="btn btn-primary">Nachricht versenden</button></td>
-                    <td><a th:href="|/chat/|"><button class="btn btn-warning" type="button">Abbrechen</button></a></td>
+                    <td><a th:href="|/messages/|"><button class="btn btn-warning" type="button">Abbrechen</button></a></td>
                 </table>
             </form>
         </div>
