--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/inquiry.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/inquiry.html
@@ -8,11 +8,9 @@
 
     <body>
         <div class="container" layout:fragment="content" style="margin-top: 50px">
-
-            <h>Ihre Anfrage wird bearbeitet...</h>
-            <dr>
-                <a th:href="|/|" role="button">Zur Übersicht</a>
-            </dr>
+            <h>Ihre Anfrage wurde an den Besitzer des Artikels übermittelt.</h>
+            <br>
+            <a th:href="|/|"> <button class="button_std_white" type="button">Zur Übersicht</button></a>
         </div>
     </body>
 
