--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </li>
-            <li style="float: right" class="navbaritem" th:classappend="${chatActive}"><a href="/chat">
+            <li style="float: right" class="navbaritem" th:classappend="${chatActive}"><a href="/messages">
                 <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
             <form method="get" action="/article/search">
                 <li style="float: right" class="navbaritem">
