--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_deleteChat.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_deleteChat.html
@@ -19,11 +19,11 @@
                         <td th:text="${chatMessage.context}">...</td>
                     </tr>
                 </table>
-                 <p>Möchten Sie die Nachricht wirklich löschen? Die Nachricht wird für alle Benutzer gelöscht!</p>
+                 <p>Möchten Sie diese Nachricht wirklich löschen?</p>
                 <br>
                 <td>
                     <button type="submit"  class="btn btn-danger">Löschen</button>
-                    <a th:href="|/chat/|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
+                    <a th:href="|/messages/|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
                 </td>
             </form>
         </div>
