--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewLendings.html
@@ -15,27 +15,27 @@
                 <table>
                     <tr>
                         <th>Artikel</th>
-                        <td th:text="${lending.lendedArticle.name}">...</td>
+                        <td th:text="${lending.lendedArticle.name}"></td>
                     </tr>
                     <tr>
                         <th>Beschreibung</th>
-                        <td th:text="${lending.lendedArticle.comment}">...</td>
+                        <td th:text="${lending.lendedArticle.comment}"></td>
                     </tr>
                     <tr>
                         <th>Besitzer</th>
-                        <td th:text="${lending.lendedArticle.owner.name}">...</td>
+                        <td th:text="${lending.lendedArticle.owner.name} + ', ' + ${lending.lendedArticle.owner.surname}"></td>
                     </tr>
                     <tr>
                         <th>Kaution</th>
-                        <td th:text="${lending.lendedArticle.deposit}">...</td>
+                        <td th:text="${lending.lendedArticle.deposit} + '€'"></td>
                     </tr>
                     <tr>
                         <th>Mietkosten</th>
-                        <td th:text="${lending.lendedArticle.rent}">...</td>
+                        <td th:text="${lending.lendedArticle.rent} + '€'"></td>
                     </tr>
                     <tr>
-                        <th>Anmerkungen</th>
-                        <td th:text="${lending.warning}">...</td>
+                        <th>Nachricht</th>
+                        <td th:text="${lending.warning}"></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -46,7 +46,7 @@
                                 <button type="finish" class="button_std">Zurückgeben</button>
                             </form>
                             <a th:href="|/openConflict/${lending.lendingID}|" role="button">
-                                <button class="button_std_red">Konflikt erzeugen</button>
+                                <button class="button_std_red">Konflikt melden</button>
                             </a>
                         </td>
                     </tr>
